k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookserver
  namespace: bookapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookserver
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bookserver
    spec:
      containers:
      - name: bookserver
        image: 416225317325.dkr.ecr.ap-southeast-2.amazonaws.com/user112-bookapp-backend:a3b4c3d9f057
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /api/books
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
