k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookserver
  namespace: bookapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/books
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: bookserver
  type: ClusterIP
