k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp
  namespace: bookapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/actions.frontend-route: '{"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"book-app","servicePort":"80","weight":100}]}}'
    alb.ingress.kubernetes.io/actions.backend-route: '{"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"bookserver","servicePort":"8080","weight":100}]}}'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-route
            port:
              name: use-annotation
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-route
            port:
              name: use-annotation
